# ai-engineering-course

./: .gitignore
lesson-10-api-layer-ai-systems/homework/: .dockerignore  Dockerfile  docker-compose.yaml  fly.toml  pyproject.toml
lesson-10-api-layer-ai-systems/homework/app/: auth.py  cache.py  llm.py  main.py  metrics.py  pricing.py  rag.py  ratelimit.py  tiers.py  usage_log.py
lesson-10-api-layer-ai-systems/homework/data/: twelve.md
lesson-10-api-layer-ai-systems/homework/scripts/: burst_twelve.sh  index.py
