[project]
name = "lesson-10-api-layer-ai-systems"
version = "0.1.0"
description = "API Layer for AI Systems - Homework"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    # Indexing pipeline (scripts/index.py)
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    # Chat streaming (app/main.py) — OpenRouter exposes an OpenAI-compatible API
    "openai>=1.50.0",
    # Per-API-key token bucket — works against Upstash Redis over RESP.
    "redis>=5.0.0",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#
#[project.scripts]
#hello = "uv_docker_example:hello"